--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,12 @@
 ---
 
 @import "{{ site.theme }}";
+
+/* Yellow */
+.theme-base-0a .sidebar {
+  background-color: #f4bf75;
+}
+.theme-base-0a .content a,
+.theme-base-0a .related-posts li a:hover {
+  color: #f4bf75;
+}
